--- a/rsc/css/colorbox/colorbox-regular.less
+++ b/rsc/css/colorbox/colorbox-regular.less
@@ -97,7 +97,7 @@
 	border: 1px solid #ccc;
 }
 #cboxLoadedContent {
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 }
 #cboxTitle {
 	position: absolute;
@@ -115,7 +115,6 @@
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	min-height: 50px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
@@ -236,7 +235,7 @@
 			display: inline-block;
 			min-width: 50px;
 			text-align: center;
-			margin: 3px 0 0;
+			margin: 0;
 			white-space: nowrap;
 		}
 		div.vote_title {
@@ -264,6 +263,7 @@
 			}
 			div.vote_title {
 				text-align: center;
+				margin-top: 0;
 			}
 		}
 	}
